First header images solution

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 
 <body>
 
-  <nav>
+  <nav class="navigation">
     <h1 class="logo">
-      <span class="logo__text--hidden">meet</span>
       <div class="logo__image">
         <img src="./assets/logo.svg" alt="meet">
       </div>
+      <span class="logo--hidden">meet</span>
     </h1>
   </nav>
 
-  <header>
+  <header class="header">
     <div class="hero">
-      <div class="hero__image hero__image--left"></div>
-      <div class="hero__image hero__image--right"></div>
+      <div class="hero__image hero__image--left">
+        <img src="./assets/desktop/image-hero-left.png" alt="">
+      </div>
+      <div class="hero__image hero__image--right">
+        <img src="./assets/desktop/image-hero-right.png" alt="">
+      </div>
     </div>
     <div class="text-wrapper">
       <div class="text">
