Finished up working on header section for mobile screens

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </div>
     <div class="text-wrapper">
       <div class="text">
-        <h2 class="header-title">Group Chat for Everyone</h2>
-        <p class="header-description">Meet makes it easy to connect with others face-to-face virtually and collaborate
+        <h2 class="text__title">Group Chat for Everyone</h2>
+        <p class="text__description">Meet makes it easy to connect with others face-to-face virtually and collaborate
           across any device.</p>
         <div class="buttons">
-          <button class="buttons--btn-1">Download v1.3</button>
-          <button class="buttons--btn-2">What is it?</button>
+          <button class="button button--btn-1">Download <span>v1.3</span></button>
+          <button class="button button--btn-2">What is it?</button>
         </div>
       </div>
     </div>
