--- a/index.html
+++ b/index.html
@@ -47,32 +47,31 @@
       <div class="guide">
         <p class="guide__number">01</p>
       </div>
-      <div class="text-wrapper">
-        <div class="image-collage">
-          <div class="image-collage--one">
-            <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall">
-          </div>
-          <div class="image-collage--two">
-            <img src="./assets/desktop/image-women-videochatting.jpg" alt="Women videochatting">
-          </div>
-          <div class="image-collage--three">
-            <img src="./assets/desktop/image-men-in-meeting.jpg" alt="Man in meeting">
-          </div>
-          <div class="image-collage--four">
-            <img src="./assets/desktop/image-man-texting.jpg" alt="Man texting">
-          </div>
+      <div class="image-collage text-wrapper">
+        <div class="image image-collage--one">
+          <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall">
         </div>
-        <div class="text">
-          <h2 class="text__title">
-            <span class="text__title--small">Built for modern use</span>
-            <span class="text__title--big">Smarter meetings, all in one place</span>
-          </h2>
-          <div class="text__content">
-            <p>Send messages, share files, show your screen, and record your meetings — all in one
-              workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
-          </div>
+        <div class="image image-collage--two">
+          <img src="./assets/desktop/image-women-videochatting.jpg" alt="Women videochatting">
+        </div>
+        <div class="image image-collage--three">
+          <img src="./assets/desktop/image-men-in-meeting.jpg" alt="Man in meeting">
+        </div>
+        <div class="image image-collage--four">
+          <img src="./assets/desktop/image-man-texting.jpg" alt="Man texting">
         </div>
       </div>
+      <div class="text text-wrapper">
+        <h2 class="text__title">
+          <span class="text__title--small">Built for modern use</span>
+          <span class="text__title--big">Smarter meetings, all in one place</span>
+        </h2>
+        <div class="text__content">
+          <p>Send messages, share files, show your screen, and record your meetings — all in one
+            workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+        </div>
+      </div>
+
     </section>
   </main>
 
