Finished up mobile view

--- a/index.html
+++ b/index.html
@@ -75,18 +75,17 @@
     </section>
   </main>
 
+  <div class="guide">
+    <p class="guide__number">02</p>
+  </div>
   <footer class="footer">
-    <div class="guide">
-      <p class="guide__number">02</p>
-    </div>
     <div class="footer-hero">
       <div class="footer-hero__shadow"></div>
-      <div class="text-wrapper">
-        <h2 class="footer__title">Experience more together</h2>
-        <div class="footer__text">
-          <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-        </div>
-        <button class="footer__cta-button"></button>
+      <div class="text text-wrapper">
+        <h2 class="text__title">Experience more together</h2>
+        <p class="text__description">Stay connected with reliable HD meetings and unlimited one-on-one and group video
+          sessions.</p>
+        <button class="text__cta-button">Download <span>v1.3</span></button>
       </div>
     </div>
   </footer>
