--- a/index.html
+++ b/index.html
@@ -21,23 +21,15 @@
   </nav>
 
   <header class="header">
-    <div class="hero">
-      <div class="hero__image hero__image--left">
-        <img src="./assets/desktop/image-hero-left.png" alt="">
-      </div>
-      <div class="hero__image hero__image--right">
-        <img src="./assets/desktop/image-hero-right.png" alt="">
-      </div>
-    </div>
-    <div class="text-wrapper">
-      <div class="text">
-        <h2 class="text__title">Group Chat for Everyone</h2>
-        <p class="text__description">Meet makes it easy to connect with others face-to-face virtually and collaborate
-          across any device.</p>
-        <div class="buttons">
-          <button class="button button--btn-1">Download <span>v1.3</span></button>
-          <button class="button button--btn-2">What is it?</button>
-        </div>
+    <div class="hero hero__image hero__image--left"></div>
+    <div class="hero hero__image hero__image--right"></div>
+    <div class="text text-wrapper">
+      <h2 class="text__title">Group Chat for Everyone</h2>
+      <p class="text__description">Meet makes it easy to connect with others face-to-face virtually and collaborate
+        across any device.</p>
+      <div class="buttons">
+        <button class="button button--btn-1">Download <span>v1.3</span></button>
+        <button class="button button--btn-2">What is it?</button>
       </div>
     </div>
   </header>
